Added few .js for map-features

--- a/Leaflet-Step-1/index_Working_0.html
+++ b/Leaflet-Step-1/index_Working_0.html
@@ -24,12 +24,6 @@
     <!-- API key -->
     <script type="text/javascript" src="static/js/config.js"></script>
   <!-- Our JavaScript -->
-  <!-- <script type="text/javascript" src="static/js/logic.js"></script> -->
-  <script type="text/javascript" src="static/js/logic_range.js"></script>
-  <!-- <script type="text/javascript" src="static/js/logic_mag.js"></script> -->
-  <!-- <script type="text/javascript" src="static/js/logic_adv.js"></script> -->
-  <!-- <script type="text/javascript" src="static/js/logic_cluster.js"></script> -->
-  <!-- <script type="text/javascript" src="static/js/logic_heatmap.js"></script> -->
-<!--  -->
+  <script type="text/javascript" src="static/js/logic.js"></script>
 </body>
 </html>
