Set at Initial-Load

--- a/Leaflet-Step-1/index.html
+++ b/Leaflet-Step-1/index.html
@@ -16,6 +16,7 @@
 
   <!-- The div that holds our map -->
   <div id="map"></div>
+  <!-- <div id="mapbox.light"></div> -->
 
   <!-- Leaflet JavaScript -->
   <script src="https://unpkg.com/leaflet@1.0.0-rc.3/dist/leaflet.js"></script>
@@ -24,8 +25,8 @@
     <!-- API key -->
     <script type="text/javascript" src="static/js/config.js"></script>
   <!-- Our JavaScript -->
-  <!-- <script type="text/javascript" src="static/js/logic.js"></script> -->
-  <script type="text/javascript" src="static/js/logic_range.js"></script>
+  <script type="text/javascript" src="static/js/logic.js"></script>
+  <!-- <script type="text/javascript" src="static/js/logic_range.js"></script> -->
   <!-- <script type="text/javascript" src="static/js/logic_mag.js"></script> -->
   <!-- <script type="text/javascript" src="static/js/logic_adv.js"></script> -->
   <!-- <script type="text/javascript" src="static/js/logic_cluster.js"></script> -->
